RESOLVED FIXED313247
Fix imported/w3c/web-platform-tests/css/css-sizing/calc-margins-block.html, calc-margins-fieldset-content.html, calc-margins-fieldset-legend.html and calc-margins-table-caption.html
https://bugs.webkit.org/show_bug.cgi?id=313247
Summary Fix imported/w3c/web-platform-tests/css/css-sizing/calc-margins-block.html, c...
alan
Reported 2026-04-24 10:40:07 PDT
ssia
Attachments
Patch (14.47 KB, patch)
2026-04-24 11:06 PDT, alan
no flags
[fast-cq]Patch (14.47 KB, patch)
2026-04-24 12:21 PDT, alan
no flags
alan
Comment 1 2026-04-24 11:06:59 PDT
Antti Koivisto
Comment 2 2026-04-24 11:35:56 PDT
Comment on attachment 479288 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=479288&action=review > LayoutTests/TestExpectations:-4495 > -imported/w3c/web-platform-tests/css/css-sizing/calc-margins-fieldset-legend.html [ ImageOnlyFailure ] finally!
alan
Comment 3 2026-04-24 12:21:37 PDT
Created attachment 479289 [details] [fast-cq]Patch
alan
Comment 4 2026-04-24 12:27:41 PDT
(In reply to Antti Koivisto from comment #2) > Comment on attachment 479288 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=479288&action=review > > > LayoutTests/TestExpectations:-4495 > > -imported/w3c/web-platform-tests/css/css-sizing/calc-margins-fieldset-legend.html [ ImageOnlyFailure ] > > finally! rejoice
EWS
Comment 5 2026-04-24 16:12:06 PDT
Committed 311987@main (38108b94b33f): <https://commits.webkit.org/311987@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 479289 [details].
Radar WebKit Bug Importer
Comment 6 2026-04-24 16:13:13 PDT
Note You need to log in before you can comment on or make changes to this bug.