Fix imported/w3c/web-platform-tests/css/css-sizing/calc-margins-block.html, calc-margins-fieldset-content.html, calc-margins-fieldset-legend.html and calc-margins-table-caption.html https://bugs.webkit.org/show_bug.cgi?id=313247

Reviewed by Antti Koivisto.

The same tryFixed()-based margin computation was duplicated in 6 places
for intrinsic width calculation. tryFixed() only handles pure fixed
lengths, missing calc() expressions like calc(10% + 100px) where the
fixed part should contribute during intrinsic sizing.

webkit.org/b/313239 fixed this for flex by using evaluateMinimum in
marginIntrinsicLogicalWidthForChild. This commit refactors the remaining
callsites to use the same function, fixing calc() margins for block,
fieldset (both content and legend), and table captions.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::intrinsicLogicalMarginStartAndEnd const):
(WebCore::RenderBlock::computeBlockPreferredLogicalWidths const):
(WebCore::RenderBlock::computePreferredWidthsForExcludedChildren const):
(WebCore::RenderBlock::marginIntrinsicLogicalWidthForChild const): Deleted.
* Source/WebCore/rendering/RenderBlock.h:
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::computeInlinePreferredLogicalWidths const):
* Source/WebCore/rendering/RenderBlockInlines.h:
(WebCore::RenderBlock::marginIntrinsicLogicalWidthForChild const):
* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::computePreferredLogicalWidths):
* Source/WebCore/rendering/mathml/RenderMathMLFraction.cpp:
* Source/WebCore/rendering/mathml/RenderMathMLRoot.cpp:
* Source/WebCore/rendering/mathml/RenderMathMLRow.cpp:
* Source/WebCore/rendering/mathml/RenderMathMLScripts.cpp:
* Source/WebCore/rendering/mathml/RenderMathMLUnderOver.cpp:

Canonical link: https://commits.webkit.org/311987@main